--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ p, li {
 
 #recommended {
     display: flex;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
 }
 
 .info-reco {
@@ -109,6 +109,21 @@ main {
 h1 {
     font-size: 4em;
     font-weight: 800;
+    margin: 0;
+}
+
+ul > li {
+    list-style-type: none
+}
+
+ul > li:hover {
+    cursor: pointer;
+    color: var(--soft-red);
+}
+
+ul {
+    display: flex;
+    gap: 2.8em;
 }
 
 button {
@@ -121,11 +136,20 @@ button {
     font-size: 1.2em;
     padding: 1em 1.8em;
     letter-spacing: 0.3em; 
+    transition: all 0.3s ease;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: var(--dark-blue-grey);
+    color: var(--white);
 }
 
 @media (min-width: 1024px) {
     nav {
         display: flex;
+        justify-content: space-between;
+        padding: 0 0 4em 0;
     }
 
     body {
