--- a/styles.css
+++ b/styles.css
@@ -159,11 +159,54 @@ body {
     padding: 4em 10%;
 }
 
-#menu, #menu-close {
+#menu {
     display: none;
 }
 
+.mobile-menu {
+    display: none;
+    top: 0;
+    right: 0;
+    width: 300px;
+    height: 100%;
+    background-color: var(--white);
+    padding: 2em;
+    box-shadow: -5px 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+}
+
+.mobile-menu ul {
+    flex-direction: column;
+    padding: 0;
+    margin-top: 3em;
+}
+
+.mobile-menu li {
+    margin-bottom: 1.5em;
+    font-size: 1.2em;
+}
+
+#menu-close {
+    text-align: right;
+    cursor: pointer;
+    position: absolute; /* Added to position the close button */
+    top: 2em; /* Adjust as needed */
+    right: 2em; /* Adjust as needed */
+}
+
+  
 @media (max-width: 542px) {
+    .desktop-menu {
+      display: none;
+    }
+    
+    #menu {
+      display: block;
+      position: relative;
+      top: 0;
+      right: 0;
+      cursor: pointer;
+    }
 
     .hidden {
         display: none;
@@ -172,8 +215,9 @@ body {
     .active {
         display: flex;
         flex-direction: column;
+        gap: 2em;
         margin: 0;
-        position: relative;
+        position: fixed;
     }
 
     body {
@@ -217,5 +261,9 @@ body {
 
     #latest {
         grid-column: 1 / 3;
+    }
+
+    ul {
+        gap: 1em;
     }
 }
